Adjusts on the chat with users

--- a/client/adminDashboard.html
+++ b/client/adminDashboard.html
@@ -112,28 +112,34 @@
             <h3 class="dashboard-subtitle">Platform Statistics</h3>
             <div class="stats-grid">
               <div class="stat-card stat-card-blue">
-                <div class="stat-icon">👥</div>
+                <div class="stat-icon"><i class="fa-solid fa-users"></i></div>
                 <div class="stat-content">
                   <span class="stat-number" id="totalUsers">0</span>
                   <span class="stat-label">Total Users</span>
                 </div>
               </div>
-              <div class="stat-card stat-card-green">
-                <div class="stat-icon">👨‍⚕️</div>
+              <div class="stat-card stat-card-blue">
+                <div class="stat-icon">
+                  <i class="fa-solid fa-user-doctor"></i>
+                </div>
                 <div class="stat-content">
                   <span class="stat-number" id="totalTherapists">0</span>
                   <span class="stat-label">Total Therapists</span>
                 </div>
               </div>
-              <div class="stat-card stat-card-orange">
-                <div class="stat-icon">⏳</div>
+              <div class="stat-card stat-card-blue">
+                <div class="stat-icon">
+                  <i class="fa-solid fa-hourglass-end"></i>
+                </div>
                 <div class="stat-content">
                   <span class="stat-number" id="pendingApplications">0</span>
                   <span class="stat-label">Pending Applications</span>
                 </div>
               </div>
-              <div class="stat-card stat-card-purple">
-                <div class="stat-icon">✅</div>
+              <div class="stat-card stat-card-blue">
+                <div class="stat-icon">
+                  <i class="fa-solid fa-check-circle"></i>
+                </div>
                 <div class="stat-content">
                   <span class="stat-number" id="approvedTherapists">0</span>
                   <span class="stat-label">Approved Therapists</span>
