--- a/client/login.html
+++ b/client/login.html
@@ -57,6 +57,7 @@
 
     <!-- Organized JavaScript Files -->
     <script src="js/utils.js"></script>
+    <script src="js/validators.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/navigation.js"></script>
     <script src="js/notifications.js"></script>
