--- a/client/userDashboard.html
+++ b/client/userDashboard.html
@@ -1411,6 +1411,17 @@
                         <option value="swahili">Swahili</option>
                         <option value="kikuyu">Kikuyu</option>
                         <option value="luo">Luo</option>
+                        <option value="french">French</option>
+                        <option value="spanish">Spanish</option>
+                        <option value="portuguese">Portuguese</option>
+                        <option value="amharic">Amharic</option>
+                        <option value="arabic">Arabic</option>
+                        <option value="german">German</option>
+                        <option value="italian">Italian</option>
+                        <option value="chinese">Chinese</option>
+                        <option value="japanese">Japanese</option>
+                        <option value="korean">Korean</option>
+                        <option value="russian">Russian</option>
                         <option value="other">Other</option>
                       </select>
                     </div>
@@ -1558,13 +1569,6 @@
                   <i class="fa-solid fa-user-doctor"></i>
                   Available Therapists
                 </h3>
-                <button
-                  onclick="forceRefreshTherapists()"
-                  class="btn-refresh"
-                  title="Refresh therapists list"
-                >
-                  <i class="fa-solid fa-rotate"></i>
-                </button>
               </div>
 
               <div class="chat-search-box">
@@ -1693,18 +1697,18 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 
     <!-- Organized JavaScript Files -->
-    <script src="js/utils.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/navigation.js"></script>
-    <script src="js/video-call.js"></script>
-    <script src="js/profile.js"></script>
-    <script src="js/dashboard.js"></script>
-    <script src="js/charts.js"></script>
-    <script src="js/mood.js"></script>
-    <script src="js/goals.js"></script>
-    <script src="js/notifications.js"></script>
-    <script src="js/sidebar.js"></script>
-    <script src="js/chat.js"></script>
+    <script src="js/utils/utils.js"></script>
+    <script src="js/auth/auth.js"></script>
+    <script src="js/ui/navigation.js"></script>
+    <script src="js/features/video-call.js"></script>
+    <script src="js/features/profile.js"></script>
+    <script src="js/dashboard/dashboard.js"></script>
+    <script src="js/features/charts.js"></script>
+    <script src="js/features/mood.js"></script>
+    <script src="js/features/goals.js"></script>
+    <script src="js/features/notifications.js"></script>
+    <script src="js/ui/sidebar.js"></script>
+    <script src="js/features/chat.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
