--- a/client/index.html
+++ b/client/index.html
@@ -3,14 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Mental Health Platform - Track your mood, find support, and prioritize your well-being" />
     <title>Mental Health Platform</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <!-- Performance: Preload critical resources -->
+    <link rel="preload" href="style.css" as="style" />
+    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
   </head>
   <body>
+    <!-- Skip to main content link for accessibility -->
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+
     <!-- Navigation -->
     <header>
       <nav class="navbar" aria-label="Main Navigation">
@@ -19,17 +26,22 @@
           ><span class="logo-accent accent">HEALTH</span>
         </div>
         <div class="navbar-links">
-          <a href="#" class="nav-link">Home</a>
+          <a href="#home" class="nav-link" aria-current="page">Home</a>
           <a href="#about" class="nav-link">About</a>
           <a href="#contact" class="nav-link">Contact</a>
         </div>
         <div class="navbar-actions">
-          <button onclick="location.href='login.html'" class="btn btn-outline">
+          <button 
+            onclick="location.href='login.html'" 
+            class="btn btn-outline"
+            aria-label="Navigate to login page"
+          >
             Login
           </button>
           <button
             onclick="location.href='register.html'"
             class="btn btn-primary"
+            aria-label="Navigate to register page"
           >
             Register
           </button>
@@ -38,7 +50,7 @@
     </header>
 
     <!-- Hero Section -->
-    <main>
+    <main id="main-content">
       <section id="home" class="section hero">
         <div class="container">
           <!-- Background slider with blur effect -->
@@ -361,12 +373,12 @@
     </footer>
     
     <!-- Organized JavaScript Files -->
-    <script src="js/utils.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/navigation.js"></script>
-    <script src="js/hero-slider.js"></script>
-    <script src="js/notifications.js"></script>
-    <script src="js/sidebar.js"></script>
+    <script src="js/utils/utils.js"></script>
+    <script src="js/auth/auth.js"></script>
+    <script src="js/ui/navigation.js"></script>
+    <script src="js/ui/hero-slider.js"></script>
+    <script src="js/features/notifications.js"></script>
+    <script src="js/ui/sidebar.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
