--- a/client/profile.html
+++ b/client/profile.html
@@ -94,12 +94,12 @@
     </section>
 
     <!-- Organized JavaScript Files -->
-    <script src="js/utils.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/navigation.js"></script>
-    <script src="js/profile.js"></script>
-    <script src="js/notifications.js"></script>
-    <script src="js/sidebar.js"></script>
+    <script src="js/utils/utils.js"></script>
+    <script src="js/auth/auth.js"></script>
+    <script src="js/ui/navigation.js"></script>
+    <script src="js/features/profile.js"></script>
+    <script src="js/features/notifications.js"></script>
+    <script src="js/ui/sidebar.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
