--- a/client/register.html
+++ b/client/register.html
@@ -196,9 +196,9 @@
     </footer>
 
     <!-- Organized JavaScript Files -->
-    <script src="js/utils.js"></script>
-    <script src="js/validators.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="js/utils/utils.js"></script>
+    <script src="js/utils/validators.js"></script>
+    <script src="js/auth/auth.js"></script>
     <script src="js/navigation.js"></script>
     <script src="js/notifications.js"></script>
     <script src="js/sidebar.js"></script>
